k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ledger-service
  namespace: ledger-x
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ledger-service
  template:
    metadata:
      labels:
        app: ledger-service
    spec:
      containers:
        - name: ledger-service
          image: boeingpo/ledger-service:latest
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 20
